# Chat-Me

./: LICENSE  OLC-3  README.md
Client/: CMakeLists.txt
Client/include/: client.h  clientdiscovery.h  connectserver.h  login.h  mainwindow.h  net_common.h  net_connection.h  net_server.h  pch.h  register.h  types.h
Client/src/: client.cpp  clientdiscovery.cpp  connectserver.cpp  login.cpp  main.cpp  mainwindow.cpp  register.cpp
Client/ui/: connectserver.ui  login.ui  mainwindow.ui  register.ui
Server/include/: net_client.h  net_message.h  net_tsqueue.h  olc_net.h
Server/src/: SimpleServer.cpp
